# povu

./: .clang-format  .clang-tidy  .clangd  .dir-locals.el  .gitignore  .gitmodules  .projectile  CLAUDE.md  CMakeLists.txt  LICENSE  PovuLean.lean  README.md  TODO.org  domibubble.py  environment.yml  guix.scm  lake-manifest.json  lakefile.lean  sanitizers.cmake  t5.gfa
dynamo/: CMakeLists.txt
ita/: CMakeLists.txt
ita/include/ita/align/: align.hpp
ita/include/ita/convolutions/: convolutions.hpp  trip.hpp
ita/include/ita/genomics/: allele.hpp  genomics.hpp  vcf.hpp
ita/include/ita/graph/: bfs_tree.hpp  graph.hpp  slice_tree.hpp
ita/include/ita/queue/: bounded_queue.hpp
ita/include/ita/traversals/: at_matrix.hpp  at_matrix_no_tangle.hpp  at_matrix_tangled.hpp  depth_matrix.hpp  traversals.hpp  untangle.hpp
ita/include/ita/variation/: color.hpp  rov.hpp  sne.hpp
ita/src/ita/align/: align.cpp
ita/src/ita/convolutions/: convolutions.cpp  trip.cpp
ita/src/ita/genomics/: genomics.cpp  vcf.cpp
ita/src/ita/graph/: graph.cpp  slice_tree.cpp
ita/src/ita/traversals/: at_matrix.cpp  at_matrix_no_tangle.cpp  at_matrix_tangled.cpp  depth_matrix.cpp  traversals.cpp  untangle.cpp
ita/src/ita/variation/: color.cpp  rov.cpp  sne.cpp
liteseq/: CMakeLists.txt  README.md
liteseq/cmake/: deps.cmake  sanitizers.cmake
liteseq/examples/: CMakeLists.txt  example.c
liteseq/include/liteseq/: gfa.h  refs.h  types.h  version.h.in
liteseq/src/: gfa.c  gfa_l.c  gfa_l.h  gfa_s.c  gfa_s.h
liteseq/src/internal/: lq_enums.h  lq_io.c  lq_io.h  lq_utils.c  lq_utils.h
liteseq/src/refs/: ref_impl.c  ref_impl.h  ref_name.c  ref_name.h  ref_walk.c  ref_walk.h
liteseq/tests/: CMakeLists.txt  enums_tests.cc  gfa_tests.cc  main_tests.cc  refs_tests.cc  utils_tests.cc
liteseq/tests/data/: gfa_with_w_lines.gfa
log/: .gitignore  CMakeLists.txt  LICENSE  README.md
log/include/: log.h
log/include/log/: location.hpp  log.h
log/samples/basic/: log_conf.h  main.c
log/samples/callbacks/: main.c
log/samples/threading/: main.c
log/src/: log.c  log_conf.h
meza/: CMakeLists.txt  README.md
meza/cmake/: deps.cmake
meza/examples/: CMakeLists.txt  hap_xors.cpp  hap_xors.hpp  main.cpp  shared.cpp  shared.hpp
meza/include/meza/: info.cuh
meza/include/meza/ops/: ops.cuh  ops.hpp
meza/include/meza/owned/: matrix.hpp
meza/include/meza/pool/: hap_comp.cuh  hap_comp.hpp  joint.hpp  matrix_pool.hpp  matrix_pool_cuda.cuh  matrix_pool_cuda.cuh.old  pool.hpp  pool_ops.hpp  split.hpp  split_cuda.cuh  split_old.hpp  split_pool_types.hpp
meza/include/meza/shared/: shared.hpp
meza/include/meza/view/: base.hpp  full.hpp  repeated_row.hpp  view.hpp
meza/src/meza/: info.cu
meza/src/meza/ops/: ops.cpp  ops.cu
meza/src/meza/owned/: matrix.cpp
meza/src/meza/pool/: hap_comp.cpp  pool_ops.cpp  split.cpp
meza/src/meza/view/: matrix_view.cpp
meza/tests/: CMakeLists.txt  hap_comp_tests.cc  main_tests.cc  matrix_pool_tests.cc  shared_pool_tests.cc  split_pool_tests.cc  split_tests.cc
mto/: CMakeLists.txt
mto/include/mto/: common.hpp  from_gfa.hpp  from_pvst.hpp  from_vcf.hpp  to_gfa.hpp  to_pvst.hpp  to_vcf.hpp
mto/src/mto/: common.cpp  from_gfa.cpp  from_pvst.cpp  from_vcf.cpp  to_gfa.cpp  to_pvst.cpp  to_vcf.cpp
oza/: CMakeLists.txt
oza/include/oza/algorithms/: concealed.hpp  flubbles.hpp  midi.hpp  parallel.hpp  smothered.hpp  tiny.hpp
oza/include/oza/graph/: bidirected.hpp  bracket_list.hpp  pvst.hpp  spanning_tree.hpp  tree_utils.hpp
oza/include/oza/refs/: refs.hpp
oza/include/povu/algorithms/: concealed.hpp  flubbles.hpp  midi.hpp  parallel.hpp  smothered.hpp  tiny.hpp
oza/include/povu/common/: app.hpp  constants.hpp  log.hpp  utils.hpp
oza/include/povu/graph/: bidirected.hpp  bracket_list.hpp  pvst.hpp  spanning_tree.hpp  tree_utils.hpp  types.hpp
oza/include/povu/refs/: refs.hpp
oza/src/oza/algorithms/: concealed.cpp  flubbles.cpp  midi.cpp  parallel.cpp  smothered.cpp  tiny.cpp
oza/src/oza/graph/: bidirected.cpp  bracket_list.cpp  spanning_tree.cpp  tree_utils.cpp
oza/src/oza/refs/: refs.cpp
oza/src/povu/algorithms/: concealed.cpp  flubbles.cpp  midi.cpp  parallel.cpp  smothered.cpp  tiny.cpp
oza/src/povu/common/: thread.cpp  (+1 more)
oza/tests/: CMakeLists.txt
oza/tests/integration_tests/: args_tests.cc  pvst_tests.cc
oza/tests/unit_tests/: spanning_tree_tests.cc
povu/: CMakeLists.txt
povu-rs/: .gitignore  Cargo.toml  IMPLEMENTATION.md  README.md  build.rs  verify_build.sh
povu-rs/examples/: builder.rs  simple.rs  topology.rs
povu-rs/povu-ffi/: CMakeLists.txt  povu_ffi.cpp  povu_ffi.h
povu-rs/src/: analysis.rs  edge.rs  error.rs  ffi.rs  graph.rs  lib.rs  native_gfa.rs  path.rs  vcf.rs  vertex.rs
povu-rs/tests/: builder_tests.rs  graph_tests.rs  native_gfa_vcf_tests.rs  vcf_emitter_tests.rs
povu/include/povu/: call.hpp  cli.hpp  decompose.hpp  gfa2vcf.hpp  info.hpp  prune.hpp  vcf.hpp  view.hpp
povu/src/povu/: call.cpp  cli.cpp  decompose.cpp  gfa2vcf.cpp  info.cpp  main.cpp  prune.cpp  vcf.cpp  view.cpp
quilt/: CMakeLists.txt  README.md
quilt/include/quilt/: app.hpp  constants.hpp  graph_types.hpp  utils.hpp
quilt/src/quilt/: graph_types.cpp  utils.cpp
tests/: CMakeLists.txt  compute_pvst.cc  genomics.cc  main_tests.cc  x
tests/integration_tests/: genomics_tests.cc  gfa2vcf_tests.cc  pvst_tests.cc
tests/lean4_conformance/: Cargo.toml  lean_reference.lean
tests/lean4_conformance/fixtures/: README.md  complex_substitution_span.gfa  deletion_flubble.gfa  hairpin_inversion_subr.gfa  insertion_flubble.gfa  linear_no_variant.gfa  malformed_path_missing_overlaps.gfa  minimal_substitution.gfa  nested_deletion.gfa  nested_substitution_missing_outer.gfa  repeat_anchor_deletion.gfa  repeat_anchor_insertion.gfa  two_ordered_substitutions.gfa  unsupported_overlap.gfa
tests/lean4_conformance/src/: downstream_profiles.rs  lib.rs  main.rs
tests/lean4_conformance/tests/: downstream_repetitive_assets.rs  downstream_repetitive_profiles.rs
tests/unit_tests/: refs_tests.cc  rov_tests.cc  spanning_tree.cc  spanning_tree_tests.cc
(+562 files in other folders)
